# esp_hid_device

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  ble_hidd_demo_main.c
